--- a/index.html
+++ b/index.html
@@ -13,9 +13,6 @@
 		<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" /> -->
 
 		<!-- JS Frameworks -->
-		<!-- jQuery 3.5.1 (CDN) -->
-		<!-- <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script> -->
-
 		<!-- VUE 2.x development version, includes helpful console warnings -->
 		<!-- CDN -->
 		<!-- <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script> -->
@@ -37,37 +34,25 @@
 				<div class="col">
 					<!-- VUE root element -->
 					<div id="root" >
-						<div v-for="(quiz,indexQ) in quizQuestions" class="container d-flex flex-column">
+						<div v-for="(quiz,indexQ) in quizQuestions" class="card" v-bind:class="(indexQ === currentQuiz) ? null : 'inactive'">
 							<div class="num-question">
 								Question {{indexQ + 1}}:
 							</div>
 							<div class="">
 								{{quiz.question}}
 							</div>
-							<div class="container" v-for="(answer,indexA) in quiz.quizAnswer">
+							<div v-for="(answer,indexA) in quiz.quizAnswer">
 								<input type="radio" :name="indexQ" :value="indexA" v-model="userAnswer[indexQ]">
 								<label for="radio">{{answer}}</label>
 							</div>
-							<!-- <div class="">
-								<div class="" v-for="el in userAnswer">
-									{{el}} - {{quiz.indexCorrectAnswer}}
-								</div>
-
-							</div> -->
+							<button @click="movePrev" v-bind:class="currentQuiz===0 ? 'inactive' : null" type="button" name="button">PREV</button>
+							<button @click="moveNext" v-bind:class="currentQuiz===4 ? 'inactive' : null" type="button" name="button">NEXT</button>
+							<button @click = "addAnswer" v-bind:class="currentQuiz===4 ? null : 'inactive'" type="button">L'ACCENDIAMO?</button>
 						</div>
-						<button @click = "addAnswer" type="button">L'ACCENDIAMO?</button>
 						<h1>{{correctUserAnswer}}/{{quizQuestions.length}}</h1>
-
-
-
-
 					</div>
-
-
 				</div>
-
 			</div>
-
 		</div>
 
 
